objects/EQAI_API_URL_Extensions__mdt/EQAI_API_URL_Extensions__mdt.object-meta.xml
<CustomObject>
    <description>URL Extensions for EQAI API Endpoints</description>
    <label>EQAI API URL Extensions</label>
    <pluralLabel>EQAI API URL Extensions</pluralLabel>
</CustomObject>