objects/EQAI_API_URL_Extensions__mdt/fields/API_Extension__c.field-meta.xml
<CustomField>
    <fullName>API_Extension__c</fullName>
    <label>API Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>