objects/EQAI_API_URL_Extensions__mdt/fields/API_Extension_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Extension_Name__c</fullName>
    <label>API Extension Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>