objects/EQAI_API_URL_Extensions__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>