objects/EQAI_API_URL_Extensions__mdt/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <label>API Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>