objects/EQAI_API_URL_Extensions__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>API_Extension__c</columns>
    <columns>API_Extension_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>